Add Home page content

--- a/public/home.html
+++ b/public/home.html
@@ -7,6 +7,20 @@
     <title>Home</title>
   </head>
   <body>
-    <h1>Home</h1>
+    <header></header>
+    <main>
+      <h1>Home Heading Example</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse harum,
+        omnis repellendus excepturi quae veritatis tempora qui nostrum hic a
+        sunt saepe cumque officia praesentium voluptas non quod! Maiores,
+        voluptates?
+      </p>
+      <button>Get Started</button>
+      <div>Hero Image</div>
+    </main>
+    <footer>
+      <p>Copyright Information Example</p>
+    </footer>
   </body>
 </html>
