Add Login page content

--- a/public/home.html
+++ b/public/home.html
@@ -7,7 +7,7 @@
     <title>Home</title>
   </head>
   <body>
-    <header></header>
+    <header><div>Logo</div></header>
     <main>
       <h1>Home Heading Example</h1>
       <p>
