--- a/public/login.html
+++ b/public/login.html
@@ -7,6 +7,21 @@
     <title>Login</title>
   </head>
   <body>
-    <h1>Login</h1>
+    <header><div>Logo</div></header>
+    <main>
+      <h1>Login</h1>
+      <form>
+        <label for="email">Email</label>
+        <input id="email" type="text" name="email" />
+        <label for="password">Password</label>
+        <input id="password" type="password" name="password" />
+        <button type="submit">Login</button>
+      </form>
+      <div>Hero Image</div>
+      <p>Don't have an account? <a href="#">Register</a></p>
+    </main>
+    <footer>
+      <p>Copyright Information Example</p>
+    </footer>
   </body>
 </html>
