Add Register page content

--- a/public/register.html
+++ b/public/register.html
@@ -7,6 +7,25 @@
     <title>Register</title>
   </head>
   <body>
-    <h1>Register</h1>
+    <header><div>Logo</div></header>
+    <main>
+      <h1>Register</h1>
+      <form>
+        <label for="username">Username</label>
+        <input id="username" type="text" name="username" />
+        <label for="email">Email</label>
+        <input id="email" type="text" name="email" />
+        <label for="password">Password</label>
+        <input id="password" type="password" name="password" />
+        <label for="passwordConfirm">Password</label>
+        <input id="passwordConfirm" type="password" name="passwordConfirm" />
+        <button type="submit">Login</button>
+      </form>
+      <div>Hero Image</div>
+      <p>Already have an account? <a href="#">Login</a></p>
+    </main>
+    <footer>
+      <p>Copyright Information Example</p>
+    </footer>
   </body>
 </html>
