Add Profile page content

--- a/public/profile.html
+++ b/public/profile.html
@@ -7,6 +7,28 @@
     <title>Profile</title>
   </head>
   <body>
-    <h1>Profile</h1>
+    <header>
+      <div>Logo</div>
+      <div>Profile Link</div>
+    </header>
+    <main>
+      <h1>Profile</h1>
+      <form>
+        <label for="username">Username</label>
+        <input id="username" type="text" name="username" />
+        <label for="email">Email</label>
+        <input id="email" type="text" name="email" />
+        <label for="password">Password</label>
+        <input id="password" type="password" name="password" />
+        <label for="passwordConfirm">Password</label>
+        <input id="passwordConfirm" type="password" name="passwordConfirm" />
+        <button type="submit">Update</button>
+        <button type="submit">Remove</button>
+      </form>
+      <div>Hero Image</div>
+    </main>
+    <footer>
+      <p>Copyright Information Example</p>
+    </footer>
   </body>
 </html>
