--- a/public/register.html
+++ b/public/register.html
@@ -19,7 +19,7 @@
         <input id="password" type="password" name="password" />
         <label for="passwordConfirm">Password</label>
         <input id="passwordConfirm" type="password" name="passwordConfirm" />
-        <button type="submit">Login</button>
+        <button type="submit">Register</button>
       </form>
       <div>Hero Image</div>
       <p>Already have an account? <a href="#">Login</a></p>
