Add Friends List page content

--- a/public/friendslist.html
+++ b/public/friendslist.html
@@ -7,6 +7,25 @@
     <title>Friends List</title>
   </head>
   <body>
-    <h1>Friends List</h1>
+    <header>
+      <div>Logo</div>
+      <div>Profile Link</div>
+    </header>
+    <main>
+      <h1>Friends List</h1>
+      <form>
+        <label for="search">Search</label>
+        <input id="search" type="text" name="search" />
+      </form>
+      <h2>Friends List</h2>
+      <div>
+        <div>Friend 1</div>
+        <div>Friend 2</div>
+        <div>Friend 3</div>
+      </div>
+    </main>
+    <footer>
+      <p>Copyright Information Example</p>
+    </footer>
   </body>
 </html>
