Add Chat page content

--- a/public/chat.html
+++ b/public/chat.html
@@ -7,6 +7,38 @@
     <title>Chat</title>
   </head>
   <body>
-    <h1>Chat</h1>
+    <header>
+      <div>Logo</div>
+      <div>Profile Link</div>
+    </header>
+    <main>
+      <h1>Chat</h1>
+
+      <div>
+        <h2>Friends List</h2>
+        <div>
+          <div>Friend 1</div>
+          <div>Friend 2</div>
+          <div>Friend 3</div>
+        </div>
+        <a href="#">Find Friends</a>
+      </div>
+      <div>
+        <div>
+          <div>Message 1</div>
+          <div>Message 2</div>
+          <div>Message 3</div>
+          <div>Message 4</div>
+        </div>
+        <form>
+          <label for="search">Message</label>
+          <input id="message" type="text" name="message" />
+          <button type="submit">Send</button>
+        </form>
+      </div>
+    </main>
+    <footer>
+      <p>Copyright Information Example</p>
+    </footer>
   </body>
 </html>
