--- a/public/home.html
+++ b/public/home.html
@@ -7,20 +7,36 @@
     <title>Home</title>
   </head>
   <body>
-    <header><div>Logo</div></header>
-    <main>
-      <h1>Home Heading Example</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse harum,
-        omnis repellendus excepturi quae veritatis tempora qui nostrum hic a
-        sunt saepe cumque officia praesentium voluptas non quod! Maiores,
-        voluptates?
-      </p>
-      <button>Get Started</button>
-      <div>Hero Image</div>
+    <header class="header">
+      <!-- logo -->
+      <a class="logo" href="home.html"
+        ><img class="logo__img" src="./images/logo.svg" alt="" />
+      </a>
+    </header>
+    <main class="main">
+      <div class="home-content">
+        <section class="home-content__copy">
+          <!-- heading -->
+          <h1 class="heading">Home Heading Example</h1>
+          <p class="subheading">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse harum,
+            omnis repellendus excepturi quae veritatis tempora qui nostrum hic a
+            sunt saepe cumque officia praesentium voluptas non quod! Maiores,
+            voluptates?
+          </p>
+          <button class="btn">Get Started</button>
+        </section>
+
+        <section class="home-content__hero">
+          <!-- hero -->
+          <div class="hero">
+            <img class="hero-img" src="./images/hero.svg" alt="" />
+          </div>
+        </section>
+      </div>
     </main>
-    <footer>
-      <p>Copyright Information Example</p>
+    <footer class="footer">
+      <p class="copyright-notice">Copyright Information Example</p>
     </footer>
   </body>
 </html>
