Add login content

--- a/public/login.html
+++ b/public/login.html
@@ -7,21 +7,52 @@
     <title>Login</title>
   </head>
   <body>
-    <header><div>Logo</div></header>
-    <main>
-      <h1>Login</h1>
-      <form>
-        <label for="email">Email</label>
-        <input id="email" type="text" name="email" />
-        <label for="password">Password</label>
-        <input id="password" type="password" name="password" />
-        <button type="submit">Login</button>
-      </form>
-      <div>Hero Image</div>
-      <p>Don't have an account? <a href="#">Register</a></p>
+    <header class="appbar">
+      <!-- logo -->
+      <a class="logo" href="home.html"
+        ><img class="logo__img" src="./images/logo.svg" alt="" />
+      </a>
+    </header>
+    <main class="main">
+      <div class="login-content">
+        <section class="login-content__form">
+          <h1 class="title">Login</h1>
+          <form class="form">
+            <div class="form__section">
+              <label class="form__label" for="email">Email</label>
+              <input
+                class="form__input-control"
+                id="email"
+                type="text"
+                name="email"
+              />
+            </div>
+
+            <div class="form__section">
+              <label class="form__label" for="password">Password</label>
+              <input
+                class="form__input-control"
+                id="password"
+                type="password"
+                name="password"
+              />
+            </div>
+
+            <div class="form__section">
+              <button class="form__submit-btn" type="submit">Login</button>
+            </div>
+          </form>
+        </section>
+        <section class="login-content__hero">
+          <div class="hero">
+            <img class="hero-img" src="./images/hero.svg" alt="" />
+          </div>
+          <p>Don't have an account? <a href="#">Register</a></p>
+        </section>
+      </div>
     </main>
-    <footer>
-      <p>Copyright Information Example</p>
+    <footer class="footer">
+      <p class="copyright-notice">Copyright Information Example</p>
     </footer>
   </body>
 </html>
