--- a/public/home.html
+++ b/public/home.html
@@ -7,7 +7,7 @@
     <title>Home</title>
   </head>
   <body>
-    <header class="header">
+    <header class="appbar">
       <!-- logo -->
       <a class="logo" href="home.html"
         ><img class="logo__img" src="./images/logo.svg" alt="" />
