Add register page content

--- a/public/home.html
+++ b/public/home.html
@@ -30,7 +30,7 @@
         <section class="home-content__hero">
           <!-- hero -->
           <div class="hero">
-            <img class="hero-img" src="./images/hero.svg" alt="" />
+            <img class="hero__img" src="./images/hero.svg" alt="" />
           </div>
         </section>
       </div>
