--- a/public/login.html
+++ b/public/login.html
@@ -45,9 +45,12 @@
         </section>
         <section class="login-content__hero">
           <div class="hero">
-            <img class="hero-img" src="./images/hero.svg" alt="" />
+            <img class="hero__img" src="./images/hero.svg" alt="" />
           </div>
-          <p>Don't have an account? <a href="#">Register</a></p>
+          <p class="goto-auth">
+            Don't have an account?
+            <a class="goto-auth__link" href="#">Register</a>
+          </p>
         </section>
       </div>
     </main>
