Add css classes to chat and friendslist forms

--- a/public/chat.html
+++ b/public/chat.html
@@ -77,7 +77,7 @@
               type="text"
               name="message"
             />
-            <button class="chat-form__input-control" type="submit">Send</button>
+            <button class="chat-form__submit-btn" type="submit">Send</button>
           </form>
         </section>
         <aside class="chat-content__friends">
