--- a/public/friendslist.html
+++ b/public/friendslist.html
@@ -28,9 +28,14 @@
     <main class="main">
       <div class="friendslist-content">
         <section class="friendslist-content__form">
-          <form>
-            <label for="search">Search</label>
-            <input id="search" type="text" name="search" />
+          <form class="seach-form">
+            <input
+              class="seach-form__input-control"
+              id="search"
+              type="text"
+              name="search"
+            />
+            <button class="seach-form__submit-btn" type="submit"></button>
           </form>
         </section>
         <section class="friendslist-content__list">
