Design home page for mobile

--- a/public/home.html
+++ b/public/home.html
@@ -18,14 +18,14 @@
       <div class="home-content">
         <section class="home-content__copy">
           <!-- heading -->
-          <h1 class="heading">Home Heading Example</h1>
-          <p class="subheading">
+          <h1 class="headline">Home Heading Example</h1>
+          <p class="subheadline">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse harum,
             omnis repellendus excepturi quae veritatis tempora qui nostrum hic a
             sunt saepe cumque officia praesentium voluptas non quod! Maiores,
             voluptates?
           </p>
-          <button class="btn">Get Started</button>
+          <button class="getstarted-btn">Get Started</button>
         </section>
 
         <section class="home-content__hero">
