Use Nunito font

--- a/public/login.html
+++ b/public/login.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="form__section">
-              <button class="form__submit-btn" type="submit">Login</button>
+              <button class="btn" type="submit">Login</button>
             </div>
           </form>
         </section>
