Add some margin below login page

--- a/public/login.html
+++ b/public/login.html
@@ -52,8 +52,8 @@
           </form>
         </section>
         <section class="login-content__hero">
-          <div class="hero">
-            <img class="hero__img" src="./images/hero.svg" alt="" />
+          <div class="login-hero">
+            <img class="login-hero__img" src="./images/hero.svg" alt="" />
           </div>
           <p class="goto-auth">
             Don't have an account?
