Design register page form

--- a/public/login.html
+++ b/public/login.html
@@ -57,7 +57,7 @@
           </div>
           <p class="goto-auth">
             Don't have an account?
-            <a class="goto-auth__link" href="#">Register</a>
+            <a class="goto-auth__link" href="./register.html">Register</a>
           </p>
         </section>
       </div>
