--- a/public/register.html
+++ b/public/register.html
@@ -60,18 +60,20 @@
             </div>
 
             <div class="form__section">
-              <button class="form__submit-btn" type="submit">Register</button>
+              <div class="btn-wrapper btn-wrapper--center">
+                <button class="btn" type="submit">Register</button>
+              </div>
             </div>
           </form>
         </section>
 
         <section class="register-content__hero">
-          <div class="hero">
-            <img class="hero__img" src="./images/hero.svg" alt="" />
+          <div class="register-hero">
+            <img class="register-hero__img" src="./images/hero.svg" alt="" />
           </div>
           <p class="goto-auth">
             Already have an account?
-            <a class="goto-auth__link" href="#">Login</a>
+            <a class="goto-auth__link" href="./login.html">Login</a>
           </p>
         </section>
       </div>
