Design profile page form

--- a/public/profile.html
+++ b/public/profile.html
@@ -69,17 +69,16 @@
             </div>
 
             <div class="form__section">
-              <button class="form__submit-btn" type="submit">Update</button>
-            </div>
-
-            <div class="form__section">
-              <button class="form__submit-btn" type="submit">Remove</button>
+              <div class="btn-wrapper btn-wrapper--space-between">
+                <button class="btn" type="submit">Update</button>
+                <button class="btn" type="submit">Remove</button>
+              </div>
             </div>
           </form>
         </section>
         <section class="profile-content__hero">
-          <div class="hero">
-            <img class="hero__img" src="./images/hero.svg" alt="" />
+          <div class="profile-hero">
+            <img class="profile-hero__img" src="./images/hero.svg" alt="" />
           </div>
         </section>
       </div>
