Set home illustration

--- a/public/home.html
+++ b/public/home.html
@@ -38,7 +38,184 @@
         <section class="home-content__hero">
           <!-- hero -->
           <div class="hero">
-            <img class="hero__img" src="./images/hero.svg" alt="" />
+            <!-- <img class="hero__img" src="./images/hero.svg" alt="" /> -->
+            <!-- SVG illustration -->
+            <svg
+              class="hero__img"
+              width="512"
+              height="512"
+              viewBox="0 0 512 512"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g id="Home-Illustration">
+                <g id="phone">
+                  <circle
+                    id="background"
+                    cx="256"
+                    cy="256"
+                    r="256"
+                    fill="#008AD1"
+                  />
+                  <rect
+                    id="outer-frame"
+                    x="144"
+                    y="44"
+                    width="224"
+                    height="424"
+                    rx="8"
+                    fill="#4F4D4D"
+                  />
+                  <rect
+                    id="inner-frame"
+                    x="148"
+                    y="48"
+                    width="216"
+                    height="416"
+                    rx="4"
+                    fill="#434343"
+                  />
+                  <rect
+                    id="screen"
+                    x="156"
+                    y="84"
+                    width="200"
+                    height="344"
+                    rx="2"
+                    fill="#EFEDED"
+                  />
+                  <rect
+                    id="speaker"
+                    x="240"
+                    y="66"
+                    width="32"
+                    height="4"
+                    rx="2"
+                    fill="#7C7777"
+                  />
+                  <circle
+                    id="front-camera"
+                    cx="256"
+                    cy="57"
+                    r="2"
+                    fill="#7C7777"
+                  />
+                  <circle
+                    id="front-flashlight"
+                    cx="224"
+                    cy="68"
+                    r="2"
+                    fill="#7C7777"
+                  />
+                  <circle
+                    id="navigation"
+                    cx="256"
+                    cy="446"
+                    r="14"
+                    fill="#9C9B9B"
+                  />
+                  <path
+                    id="power-btn"
+                    d="M141 115C141 113.895 141.895 113 143 113H144V131H143C141.895 131 141 130.105 141 129V115Z"
+                    fill="#5A5959"
+                  />
+                  <path
+                    id="volume-up-btn"
+                    d="M141 141C141 139.895 141.895 139 143 139H144V162H143C141.895 162 141 161.105 141 160V141Z"
+                    fill="#5A5959"
+                  />
+                  <path
+                    id="volume-down-btn"
+                    d="M141 166C141 164.895 141.895 164 143 164H144V187H143C141.895 187 141 186.105 141 185V166Z"
+                    fill="#5A5959"
+                  />
+                </g>
+                <g id="chat-message">
+                  <ellipse
+                    id="bubble"
+                    cx="254"
+                    cy="155.5"
+                    rx="108"
+                    ry="50.5"
+                    fill="white"
+                  />
+                  <path
+                    id="bubble-arrow"
+                    d="M85.3029 136.302L171.544 139.367L167.555 162.407L85.3029 136.302Z"
+                    fill="white"
+                  />
+                  <rect
+                    id="top-text"
+                    x="186"
+                    y="136"
+                    width="145"
+                    height="6"
+                    rx="3"
+                    fill="#EF233C"
+                  />
+                  <rect
+                    id="middle-text"
+                    x="186"
+                    y="153"
+                    width="143"
+                    height="6"
+                    rx="3"
+                    fill="#EF233C"
+                  />
+                  <rect
+                    id="bottom-text"
+                    x="186"
+                    y="173"
+                    width="103"
+                    height="6"
+                    rx="3"
+                    fill="#EF233C"
+                  />
+                </g>
+                <g id="chat-message_2">
+                  <ellipse
+                    id="bubble_2"
+                    cx="260"
+                    cy="277.5"
+                    rx="108"
+                    ry="50.5"
+                    fill="white"
+                  />
+                  <path
+                    id="bubble-arrow_2"
+                    d="M430.551 261.274L348.615 288.356L344.352 265.366L430.551 261.274Z"
+                    fill="white"
+                  />
+                  <rect
+                    id="top-text_2"
+                    x="192"
+                    y="258"
+                    width="145"
+                    height="6"
+                    rx="3"
+                    fill="#EF233C"
+                  />
+                  <rect
+                    id="middle-text_2"
+                    x="192"
+                    y="275"
+                    width="143"
+                    height="6"
+                    rx="3"
+                    fill="#EF233C"
+                  />
+                  <rect
+                    id="bottom-text_2"
+                    x="192"
+                    y="295"
+                    width="103"
+                    height="6"
+                    rx="3"
+                    fill="#EF233C"
+                  />
+                </g>
+              </g>
+            </svg>
           </div>
         </section>
       </div>
